// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-searchfield Custom Visual 1`] = `
<div
  class="m-input-style m-searchfield m-searchfield-stories m--has-label m--is-tag-default"
  style="width: 100%; max-width: 288px;"
  word-wrap="true"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <label
        class="m-input-style__label"
        for="mSearchfield-fakeId"
        style="margin-right: 0px;"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            Search
          </span>
           
          <!---->
        </span>
      </label>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mSearchfield-fakeId"
            type="search"
          />
             
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-input-style__append"
    >
      <button
        aria-controls="mSearchfield-fakeId"
        class="m-searchfield__search-button"
        title="Rechercher"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-searchfield__search-button-icon"
          height="22px"
          width="22px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
      </button>
    </div>
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-validation-message m-searchfield__validation"
      id="validationMessageId"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-searchfield Error 1`] = `
<div
  class="m-input-style m-searchfield m--has-error m--has-label m--has-validation-message m--is-tag-default"
  style="width: 100%; max-width: 288px;"
  word-wrap="true"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <label
        class="m-input-style__label"
        for="mSearchfield-fakeId"
        style="margin-right: 0px;"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            Search
          </span>
           
          <!---->
        </span>
      </label>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            aria-invalid="true"
            class="m-textfield__input"
            id="mSearchfield-fakeId"
            type="search"
          />
             
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-input-style__append"
    >
      <button
        aria-controls="mSearchfield-fakeId"
        class="m-searchfield__search-button"
        title="Rechercher"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-searchfield__search-button-icon"
          height="22px"
          width="22px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
      </button>
    </div>
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-validation-message m-searchfield__validation"
      id="validationMessageId"
    >
      <p
        aria-live="polite"
        class="m-validation-message__error"
      >
        <svg
          class="m-svg m-validation-message__icon"
          height="1em"
          width="1em"
        >
          <title>
            Erreur
          </title>
        </svg>
         
        <span
          class="m-validation-message__text"
        >
          Error message
        </span>
      </p>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-searchfield Label 1`] = `
<div
  class="m-input-style m-searchfield m--has-label m--is-tag-default"
  n=""
  style="width: 100%; max-width: 288px;"
  word-wrap="true"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <label
        class="m-input-style__label"
        for="mSearchfield-fakeId"
        style="margin-right: 0px;"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            Search
          </span>
           
          <!---->
        </span>
      </label>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mSearchfield-fakeId"
            type="search"
          />
             
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-input-style__append"
    >
      <button
        aria-controls="mSearchfield-fakeId"
        class="m-searchfield__search-button"
        title="Rechercher"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-searchfield__search-button-icon"
          height="22px"
          width="22px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
      </button>
    </div>
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-validation-message m-searchfield__validation"
      id="validationMessageId"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-searchfield Placeholder 1`] = `
<div
  class="m-input-style m-searchfield m--has-value m--is-tag-default"
  style="width: 100%; max-width: 288px;"
  word-wrap="true"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mSearchfield-fakeId"
            placeholder="placeholder"
            type="search"
          />
             
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-input-style__append"
    >
      <button
        aria-controls="mSearchfield-fakeId"
        class="m-searchfield__search-button"
        title="Rechercher"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-searchfield__search-button-icon"
          height="22px"
          width="22px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
      </button>
    </div>
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-validation-message m-searchfield__validation"
      id="validationMessageId"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-searchfield Valid 1`] = `
<div
  class="m-input-style m-searchfield m--is-valid m--has-label m--has-validation-message m--is-tag-default"
  style="width: 100%; max-width: 288px;"
  word-wrap="true"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <label
        class="m-input-style__label"
        for="mSearchfield-fakeId"
        style="margin-right: 0px;"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            Search
          </span>
           
          <!---->
        </span>
      </label>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mSearchfield-fakeId"
            type="search"
          />
             
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-input-style__append"
    >
      <button
        aria-controls="mSearchfield-fakeId"
        class="m-searchfield__search-button"
        title="Rechercher"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-searchfield__search-button-icon"
          height="22px"
          width="22px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
      </button>
    </div>
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-validation-message m-searchfield__validation"
      id="validationMessageId"
    >
      <p
        aria-live="polite"
        class="m-validation-message__valid"
      >
        <svg
          class="m-svg m-validation-message__icon"
          height="1em"
          width="1em"
        >
          <title>
            Valide
          </title>
        </svg>
         
        <span
          class="m-validation-message__text"
        >
          Valid message
        </span>
      </p>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-searchfield default 1`] = `
<div
  class="m-input-style m-searchfield m--is-tag-default"
  style="width: 100%; max-width: 288px;"
  word-wrap="true"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
          <input
            aria-describedby="fakeId"
            class="m-textfield__input"
            id="mSearchfield-fakeId"
            type="search"
          />
             
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-input-style__append"
    >
      <button
        aria-controls="mSearchfield-fakeId"
        class="m-searchfield__search-button"
        title="Rechercher"
      >
        <svg
          aria-hidden="true"
          class="m-icon m-searchfield__search-button-icon"
          height="22px"
          width="22px"
        >
          <!---->
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
      </button>
    </div>
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-validation-message m-searchfield__validation"
      id="validationMessageId"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;
